--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,22 @@
 APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
+APP_ENV=development
+APP_KEY=base64:Fv6A8T6hrdGbVL19ddavgvjMD47Aeehw35cxzA0J8eQ=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
+DB_HOST=localhost
+DB_PORT=3307
+DB_DATABASE=student
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DRIVER=public
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
